fix on mobile

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ a:link:active, a:visited:active {
 
 #card{
 	background: rgba(255, 255, 255, 0.05);
-	max-height: max-content;
+	max-height: fit-content;
 	max-width: 600px;
 	border-radius: 10px;
 	position: relative;
